--- a/src/componets/hero/Hero.module.css
+++ b/src/componets/hero/Hero.module.css
@@ -25,6 +25,7 @@
     background: linear-gradient(135.74deg,#0bb5ff 14.09%,#6dd3f3 83.81%);
 }
 .cart2{
+    margin-left: 32rem;
     position: absolute;
     bottom: 25%;
     display: flex;
@@ -32,7 +33,38 @@
     align-items:center;
     
 }
-
+.cart2>svg{
+    width: 30px;
+    height: 30px;
+    background: white;
+    padding: 10px;
+    border-radius: 50%;
+    border: 6px solid black;
+}
+.singup{
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+    background: wheat;
+    padding: 10px;
+    font-size: 0.8rem;
+    border-radius: 15px;
+    box-shadow: var(--shadow1);
+}
+.singup>:first-child{
+    display: block;
+    width: 6rem;
+}
+.singup>:nth-child(2){
+    border-radius: 50%;
+    border: 1px solid skyblue;
+    display: flex;
+    width: 20px;
+    height: 20px;
+    padding: 5px;
+    align-items: center;
+    justify-content: center;
+}
 
 
 
