--- a/src/componets/products/Products.module.css
+++ b/src/componets/products/Products.module.css
@@ -53,3 +53,13 @@ border-radius: 1rem ;
     width: 6rem;
     height: 11rem;
 } */
+
+@media screen and (max-width:640px) {
+.menu{
+    margin-left: -2rem;
+    gap: 0.5rem;
+    flex-wrap: wrap;
+    width: 100%;
+    font-style: 1.2rem;
+}
+}
