--- a/src/componets/testimonials/Testimonial.module.css
+++ b/src/componets/testimonials/Testimonial.module.css
@@ -79,3 +79,17 @@ left: 45%;
 .testimonial>span:nth-of-type(2) {
 font-weight:500 ;
 }
+@media screen and (max-width:640px) {
+.wrapper{
+    grid-template-columns: 1fr;
+}
+.wrapper>img {
+    width: 80vw;
+}
+.wrapper>:nth-child(3),.wrapper>:nth-child(1){
+    text-align: center;
+}
+.testimonial{
+    width: 200px;
+}
+}
